# win-diskclone

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  build-docker.sh  build.rs
.cargo/: config.toml
.devcontainer/: devcontainer.json
.github/workflows/: build.yml
assets/: README.md
diskclone-visual/: Cargo.toml  build.rs
diskclone-visual/src/: main.rs
src/: diagram.rs  disk.rs  error.rs  image_builder.rs  lib.rs  local_sink.rs  main.rs  ssh_sink.rs  vss.rs
