[package]
name = "diskclone-visual"
version = "1.1.0"
edition = "2021"
description = "GUI for diskclone - Windows bootable disk clone via VSS"
license = "MIT OR Apache-2.0"
authors = ["Matt - Vim and Tonic <https://www.youtube.com/@VimAndTonic>"]

build = "build.rs"

[build-dependencies]
winresource = "0.1"

[dependencies]
diskclone = { path = ".." }
eframe = { version = "0.29", default-features = false, features = ["default_fonts", "glow"] }
egui = "0.29"
